Cleanup demo notebook and remove HPLS notebooks

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -34,7 +34,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import plot_weights_vs_radii\n",
     "from clustering.kmeans import TunedClustering"
    ]
   },
@@ -51,10 +50,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT_DIR = Path(\"..\")\n",
-    "DATA_DIR = ROOT_DIR / \"data\"\n",
-    "INPUT_DATA_DIR = DATA_DIR / \"input\"\n",
-    "OUTPUT_DATA_DIR = DATA_DIR / \"output\""
+    "ROOT_DIR = Path(\".\")\n",
+    "DATA_DIR = ROOT_DIR / \"data\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# choose which demo data to use\n",
+    "data_type = \"weighted_grids\" #\"rooftops\""
    ]
   },
   {
@@ -67,14 +88,17 @@
     "n_jobs = -1\n",
     "initial_max_trials = 100\n",
     "max_passes = 100\n",
-    "subsequent_max_trials = 20\n",
-    "\n",
-    "# data-specific\n",
-    "data_type = \"rooftops\"\n",
-    "# data_type = \"grid_weights\"\n",
-    "\n",
+    "subsequent_max_trials = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if data_type == \"rooftops\":\n",
-    "    gdf_for_cluster = gpd.read_parquet(INPUT_DATA_DIR / \"rooftops.parquet\")\n",
+    "    gdf_for_cluster = gpd.read_parquet(DATA_DIR / \"rooftops.parquet\")\n",
     "    gdf_for_cluster.loc[:, \"weight\"] = 1\n",
     "    # admin variables\n",
     "    id_col = \"rooftop_id\"\n",
@@ -90,7 +114,7 @@
     "    minibatch_reassignment_ratio = 0.1\n",
     "\n",
     "else:\n",
-    "    gdf_for_cluster = gpd.read_parquet(INPUT_DATA_DIR / \"grids.parquet\")\n",
+    "    gdf_for_cluster = gpd.read_parquet(DATA_DIR / \"grids.parquet\")\n",
     "    # admin variables\n",
     "    id_col = \"grid_id\"\n",
     "    lat_col = \"Lat\"\n",
@@ -111,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clustering"
+    "### Initialise Algorithm"
    ]
   },
   {
@@ -135,6 +159,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Run Algorithm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -149,6 +180,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examine results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_w_clusters.plot(column=\"cluster_id\", markersize=0.1, figsize=(10, 10))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gridsample.reporting import plot_weights_vs_radii\n",
+    "from gridsample.mapping import create_interactive_map"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -159,8 +226,8 @@
     "    point_weight_col=weight_col,\n",
     "    point_projected_epsg=projected_epsg,\n",
     "    y_human_readable=data_type,\n",
-    "    # output_filepath=OUTPUT_DATA_DIR / f\"{data_type}_minibatch_init1_reassignment0.05_PROJECTED.png\", \n",
-    ")"
+    ")\n",
+    "plt.show()"
    ]
   },
   {
@@ -169,17 +236,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1m 44s for n_init=1 (classic)\n",
-    "\n",
-    "# changing MiniBatch reassignment_ratio\n",
-    "# 1m 41s for n_init=1 (minibatch, reassignment_ratio=0)\n",
-    "# 1m 38s for n_init=1 (minibatch, reassignment_ratio=0.01)\n",
-    "# 1m 31s for n_init=1 (minibatch, reassignment_ratio=0.05)\n",
-    "# 1m 28s for n_init=1 (minibatch, reassignment_ratio=0.10)\n",
-    "\n",
-    "# changing n_init\n",
-    "# 3m 15s for n_init=5 (classic)\n",
-    "# 2m 42 for n_init=5 (minibatch)"
+    "folium_map = create_interactive_map(\n",
+    "    points_gdf=gdf_w_clusters,\n",
+    "    # cluster_gdf=cluster_pivot_gdf,\n",
+    "    cluster_id_col=\"cluster_id\",\n",
+    "    point_id_col=\"grid_id\",\n",
+    "    point_lat_col=\"Lat\",\n",
+    "    point_lon_col=\"Lon\",\n",
+    "    cols_for_tooltip=[\"grid_id\", \"cluster_id\"],\n",
+    "    zoom_start=12,\n",
+    ")\n",
+    "folium_map"
    ]
   }
  ],
