HOTFIX: demo notebook cleanup

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "# choose which demo data to use\n",
-    "data_type = \"weighted_grids\" #\"rooftops\""
+    "data_type = \"rooftops\" #\"weighted_grids\""
    ]
   },
   {
@@ -187,6 +187,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Simple plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -203,6 +210,15 @@
    "source": [
     "gdf_w_clusters.plot(column=\"cluster_id\", markersize=0.1, figsize=(10, 10))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using functions from `gridsample`\n",
+    "\n",
+    "You need to have installed `gridsample` via `pip install .` in that repo's root folder into the environment you're using for running this notebook."
    ]
   },
   {
@@ -238,12 +254,11 @@
    "source": [
     "folium_map = create_interactive_map(\n",
     "    points_gdf=gdf_w_clusters,\n",
-    "    # cluster_gdf=cluster_pivot_gdf,\n",
     "    cluster_id_col=\"cluster_id\",\n",
-    "    point_id_col=\"grid_id\",\n",
-    "    point_lat_col=\"Lat\",\n",
-    "    point_lon_col=\"Lon\",\n",
-    "    cols_for_tooltip=[\"grid_id\", \"cluster_id\"],\n",
+    "    point_id_col=id_col,\n",
+    "    point_lat_col=lat_col,\n",
+    "    point_lon_col=lon_col,\n",
+    "    cols_for_tooltip=[id_col, \"cluster_id\"],\n",
     "    zoom_start=12,\n",
     ")\n",
     "folium_map"
