--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -132,6 +132,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_for_cluster.iloc[1:2].plot()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -177,6 +186,15 @@
     "    projected_epsg=projected_epsg,\n",
     "    return_type=\"geodataframe\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_w_clusters"
    ]
   },
   {
@@ -258,11 +276,17 @@
     "    point_id_col=id_col,\n",
     "    point_lat_col=lat_col,\n",
     "    point_lon_col=lon_col,\n",
-    "    cols_for_tooltip=[id_col, \"cluster_id\"],\n",
     "    zoom_start=12,\n",
     ")\n",
     "folium_map"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
